# szeg

./: .gitignore  Cargo.toml  creds.env  elm.json  flake.nix
src/: Main.elm  client.rs  main.rs  model.rs
