[package]
name = "szeg"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "szeg-ws"

[dependencies]
axum = { version = "0.6", features = ["ws", "headers"] }
elm_rs = "0.2.1"
elm_rs_derive = "0.2.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "szeg-ws"
path = "src/main.rs"

[[bin]]
name = "szeg-client"
path = "src/client.rs"

[[bin]]
name = "szeg-model"
path = "src/model.rs"
